# EncurtadoPy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  readme.md  requirements.txt
.github/: nothing
.github/workflows/: deploy.yml
app/: __init__.py  __main__.py  config.py  forms.py  routes.py  short.py
app/misc/: gen_seed.py
app/models/: __init__.py  app_models.py
app/static/css/: styles copy.css
app/static/js/: scripts.js  show_modal.js
app/templates/: index.bkp  index.html
app/templates/includes/: message.html
