[tool.poetry]
name = "encurtadopy"
version = "0.1.0"
description = ""
authors = ["Robotz213 <nicholas@robotz.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-jwt-extended = "^4.7.1"
flask-sqlalchemy = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-form = "^1.0.0"
flask-wtf = "^1.2.2"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"
flask-marshmallow = "^1.2.1"
python-dotenv = "^1.0.1"
flask-mysqldb = "^2.0.0"
mysql-connector-python = "^9.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black" # Garante compatibilidade com Black
line_length = 88  # O mesmo limite de linha do Black

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
